--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
     <script src="https://kit.fontawesome.com/8b9d102543.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.prefix.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
     <title>Natours | Exciting tours for adventurous people</title>
@@ -347,7 +347,7 @@
                <li class="footer__item"><a class="footer__link">Terms</a></li>
             </ul>
             <div class="footer__copyright">
-                Built by  <a href="#" class="footer__link"> Griffin Media Services </a>  &copy; 2021
+                <!-- Built by  <a href="#" class="footer__link"> Griffin Media Services </a>  &copy; 2021 -->
             </div>
        </div>
     </footer>
